--- a/VBProject/My Project/Resources.resx
+++ b/VBProject/My Project/Resources.resx
@@ -172,4 +172,7 @@
   <data name="woodlightdark" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\woodlightdark.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="backHighlight" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\backHighlight.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
